--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "run-p dev:**",
-    "dev:server": "nodemon server.js",
+    "dev:server": "nodemon --ignore './client/' server.js",
     "dev:app": "cd client && npm start",
     "build:app": "cd client && npm build",
     "start": "node server.js",
